# scope

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  config.h.in  configure  configure.in
config/: type_sized_ints.m4
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  amend  asy.c  defs.h  global.h  header  scope  scope.c  uninstall  util.c  util.h
test/: a.out  crtscts.c  sizes  sizes.c  timeval
